Commit 2: Form finished.

--- a/testForm1.html
+++ b/testForm1.html
@@ -10,6 +10,94 @@
         <link rel="stylesheet" href="testForm1.css">
     </head>
     <body>
+        <header>
+
+        </header>
+
+
+
+        <section id="form">
+            <div class="container">
+                <div class="text">
+                    <!-- <h1>Contact Us</h1>
+                    <p>
+                        Interested in working together? 
+                        Fill out some info and we will 
+                        be in touch shortly! We can't 
+                        wait to hear from you!
+                    </p> -->
+                </div>
+
+                <form action="#" method="get">
+
+                    <div class="formBox">
+                        <div class="label">
+                            <label for="name">Name</label>
+                        </div>
+                        
+                        <input type="text" name="name" placeholder="Enter your first and last name..." required>
+                    </div>
+
+                    <div class="formBox">
+                        <div class="label"> 
+                            <label for="email">Email</label>
+                        </div>                        
+                        <input type="email" name="email" placeholder="Enter your email..." required>
+                    </div>
+
+                    <div class="checkBox">
+                        <!-- <input type="radio" name="drone">
+                        <label for="radio">Sign up for news and updates</label> -->
+                        <input type="checkbox" id="myCheckbox">
+                        <label for="myCheckbox">Sign up for news and updates</label>    
+                    </div>
+
+                    <div class="formBox">
+                        <div class="label">
+                            <label for="ig">Instagram</label>
+                        </div>
+                        
+                        <input type="text" name="Instagram" placeholder="Enter your Instagram...">
+                    </div>
+
+                    <div class="formBox">
+                        <div class="label">
+                            <label for="Phone">Phone</label>
+                        </div>                       
+                        <input type="tel" name="Phone" placeholder="Enter your Phone..." required>
+                    </div>
+
+                    <div class="formBox">
+                        <div class="label">
+                            <label for="Budget">Budget</label>
+                        </div>                        
+                        <input type="number" name="Phone" placeholder="Enter your Phone..." required>
+                    </div>
+
+                    <div class="formBox">
+                        <div class="label">
+                            <label for="Phone">How can we help you?</label>
+                        </div>
+                        <!-- <input type="text" name="information" placeholder="Describe what you need..." required>                       -->
+                        <textarea type="text" name="information" placeholder="Describe what you need..." required> 
+
+                        </textarea>
+                    </div>
+
+                    <div class="sendButton">
+                        <button type="submit" class="button3">Send</button>
+                    </div>
+
+                </form>
+            </div>
+        </section>
+
+        <!-- <footer>
+            <div class="container">
+
+            </div>
+        </footer> -->
+
 
     </body>
 </html>
